did all the recipe pages

--- a/coconutLamb-recipe.html
+++ b/coconutLamb-recipe.html
@@ -28,7 +28,6 @@
         <!-- links -->
         <div class="nav-links show-links">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="recipe.html" class="nav-link">Recipe</a>
             <a href="tags.html" class="nav-link">Tags</a>
             <a href="about.html" class="nav-link">About</a>
 
@@ -44,9 +43,9 @@
     <main class="page">
       <div class="recipe-page">
           <section class="recipe-hero">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/-xjmpnShweU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullscreen></iframe> 
+              <iframe width="400" height="315" src="https://www.youtube.com/embed/-xjmpnShweU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullscreen></iframe> 
               <article>
-                  <h2>Grenadian Coconut Lamb Curry</h2>
+                  <h2>Grenadian Curry Goat</h2>
                  <p>
                     Made with substantial goat flesh cooked till extra soft, fresh spices, and so
                     much flavor, this rich and satisfyingly delicious Curry Goat is best served
@@ -57,24 +56,7 @@
                       People… Curry goat is without a doubt one of my favorite West Indian meals.
                       Curry, in general, is one of my favorite types of spices. This is a dish that
                       I grew up with and have enjoyed for a long time!
-                  </p>
-
-                  <p>
-                      To begin, curry goat is a delicious and filling stew prepared with robust goat
-                      meat and curry powder. Aromatics, various spices, and potatoes are all common
-                      ingredients. Curry goat is also cooked for a few hours to ensure that the goat
-                      flesh is totally soft. It practically crumbles and absorbs all of the
-                      wonderful flavors it was cooked in. This meal is popular in the Caribbean,
-                      India, and Southeast Asia.
-                    </p>
-                    <p>
-                        A decent pot of curry goat should always be served with rice and peas,
-                        according to any Islander! Aside from being a part of my culture, I enjoy how
-                        comfortable this meal is. The gravy is exceptionally thick and delicious, and
-                        it has a lot of flavor. The goat flesh is fork-tender, and the potatoes offer
-                        a layer of comfort.
-                    </p>
-
+                  </p>              
 
                     <!-- recipe icons -->
                     <div class="recipe-icons">
@@ -99,13 +81,37 @@
                     </div>
 
                     <!-- recipe tags  -->
-                    <div class="recipe-tags">
-                        Tags: <a href="tag-template.html">Beef</a>
-                        <a href="tag-template.html">Oil-down</a>
-                        <a href="tag-template.html">Pelau</a>
-                        <a href="tag-template.html">Breakfast</a>
+                    <div class="recipe-tags-curry">
+                        Tags: 
+                        <a href="https://www.butterbeready.com/salmon-cakes-with-quick-aioli/">Salmon Cake</a>
+                        <a href="https://www.butterbeready.com/creamy-chicken-and-mushrooms/">Creamy Chicken and Mushrooms</a>
+                        <a href="https://www.butterbeready.com/chicken-and-dumplings-recipe/">Easy Chicken & Dumplings</a>
+                        <a href="https://www.butterbeready.com/jamaican-rice-and-peas/">Jamaican Rice & Peas</a>
                     </div>
               </article>
+          </section>
+
+          <section class="flex">
+            <article>
+              <p>
+                To begin, curry goat is a delicious and filling stew prepared with robust goat
+                meat and curry powder. Aromatics, various spices, and potatoes are all common
+                ingredients. Curry goat is also cooked for a few hours to ensure that the goat
+                flesh is totally soft. It practically crumbles and absorbs all of the
+                wonderful flavors it was cooked in. This meal is popular in the Caribbean,
+                India, and Southeast Asia.
+              </p>
+              
+            </article>
+            <article>
+              <p>
+                A decent pot of curry goat should always be served with rice and peas,
+                according to any Islander! Aside from being a part of my culture, I enjoy how
+                comfortable this meal is. The gravy is exceptionally thick and delicious, and
+                it has a lot of flavor. The goat flesh is fork-tender, and the potatoes offer
+                a layer of comfort.
+            </p>
+            </article>
           </section>
 
           <!-- recipe contents -->
@@ -218,7 +224,7 @@
 
               <div>
                   <h4>Tools</h4>
-                  <p class="single-tools">Hand Blend</p>
+                  <p class="single-tools">Bowl</p>
                   <p class="single-tools">Large Pot</p>
                   <p class="single-tools"> Measuring Spoons</p>
                   <p class="single-tools">Measuring Cups</p>
