--- a/nutmegChicken-recipe.html
+++ b/nutmegChicken-recipe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Recipe</title>
+    <title>Nutmeg Tarragon Roasted Chicken</title>
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -28,7 +28,6 @@
         <!-- links -->
         <div class="nav-links show-links">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="recipe.html" class="nav-link">Recipe</a>
             <a href="tags.html" class="nav-link">Tags</a>
             <a href="about.html" class="nav-link">About</a>
 
@@ -44,30 +43,32 @@
     <main class="page">
       <div class="recipe-page">
           <section class="recipe-hero">
-              <img src="./assets/recipe/recipe_1.jpg" class="img recipe-hero-img" alt="spoons"/>
+            <iframe width="400" height="315" src="https://www.youtube.com/embed/jEJh9iwnEqk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullscreen></iframe>
               <article>
-                  <h2>Banana Pancakes</h2>
+                  <h2>Nutmeg Tarragon Roasted Chicken</h2>
                   <p>
-                        Another recipe on here that you probably won't identify with the Caribbean,
-                        but it's one I make frequently and felt compelled to share with you. It's
-                        packed with deep, rich, and soothing tastes after being slowly cooked in the
-                        oven until the meat falls from the bones. In Canada, winters can be terrible,
-                        so a dish like this strikes the spot on those cold nights, and leftovers can
-                        simply be refrigerated and reheated.
-                    </p>
+                    You'll want to pinch a piece of this nicely browned roasted chicken as soon as
+                    it comes out of the oven and pop it into your mouth. I can't say I blame you.
+                    After all, the perfume of nutmeg's nutty sweetness combined with tarragon's
+                    bittersweet flavor and sweet fennel that has been filling the home will have
+                    you drooling. The chicken is soft and juicy, and everyone who eats it will
+                    find it to be a new favorite.
+                  </p>
+
+
                     <!-- recipe icons -->
                     <div class="recipe-icons">
                         <!-- single recipe icon -->
                         <article>
                             <i class="fas fa-clock"></i>
                             <h5>prep time</h5>
-                            <p>30 mins</p>
+                            <p>6 mins</p>
                         </article>
                         <!-- single recipe icon -->
                         <article>
                             <i class="far fa-clock"></i>
                             <h5>cook time</h5>
-                            <p>15 mins</p>
+                            <p>1hr 30mins</p>
                         </article>
                         <!-- single recipe icon -->
                         <article>
@@ -79,12 +80,38 @@
 
                     <!-- recipe tags  -->
                     <div class="recipe-tags">
-                        Tags: <a href="tag-template.html">Beef</a>
-                        <a href="tag-template.html">Oil-down</a>
-                        <a href="tag-template.html">Pelau</a>
-                        <a href="tag-template.html">Breakfast</a>
+                        Tags: 
+                        <a href="https://julietkitchen.com/Wholesome%20and%20Fresh%20Foods/cuisine/">Cuisine</a>
+                        <a href="https://julietkitchen.com/Wholesome%20and%20Fresh%20Foods/chicken-marinade/">Chicken Marinade</a>
+                        <a href="https://julietkitchen.com/Wholesome%20and%20Fresh%20Foods/holiday-chicken-recipe/">Holiday Chicken</a>
+                        <a href="https://julietkitchen.com/Wholesome%20and%20Fresh%20Foods/how-to-make-perfect-roasted-chicken/">Roasted Chicken</a>
                     </div>
               </article>
+          </section>
+
+          <section class="flex">
+            <article>
+              <p>
+                  A Weber grill book gave me the idea for the nutmeg-seasoned chicken. I recall
+                  being hesitant to use the seasoning on grilled chicken. It was a fantastic
+                  dish. I've been working hard on this recipe since I had their version of
+                  grilled chicken. Fresh tarragon, freshly grated nutmeg, and the inclusion of
+                  fennel are noticeable distinctions. These adjustments elevated the flavor
+                  profile to new heights. I usually roast it in the oven, but it can also be
+                  grilled whole or butterflied over indirect heat.
+              </p>
+            </article>
+            <article>
+              <p>
+                Even if you bake it in the oven, the bake time will vary. I like to cook the
+                chicken to an internal temperature of 175 degrees Fahrenheit; the standard
+                safe temperature for chicken is 165 degrees Fahrenheit. Also, the oven
+                temperature will impact how long it takes to cook — I use a lower temperature
+                of 350 degrees and was able to reach 175 degrees in just under 1 1/2 hours
+                with my four-pounder.
+              </p>
+
+            </article>
           </section>
 
           <!-- recipe contents -->
@@ -97,7 +124,11 @@
                       <p>Step 1</p>
                       <div></div>
                   </header>
-                  <p>Over high heat, heat you pot</p>
+                  <p>
+                    In a small bowl, add all the marinade ingredients. Use a small spoon to mix
+                    together to form a lose paste.
+                  </p>
+
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -105,7 +136,9 @@
                       <p>Step 2</p>
                       <div></div>
                   </header>
-                  <p>When the pot is hot, add the oil, followed by the brown sugar.</p>
+                  <p>
+                    OPTIONAL: rinse and dry chicken thoroughly.
+                  </p>
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -114,8 +147,7 @@
                       <div></div>
                   </header>
                   <p>
-                    When the sugar starts to bubble and caramelize, stir constantly with a pot
-                    spoon until it turns a rich amber color with a hint of black jack.
+                    Place the chicken on a sheet pan lined with parchment paper.
                 </p>
 
               </div>
@@ -126,9 +158,7 @@
                       <div></div>
                   </header>
                  <p>
-                    Add the seasoned chicken pieces to the pot right away and toss to uniformly
-                    coat them in caramelized sugar. Allow 10 minutes for the chicken to simmer
-                    (brown).
+                  Place the chicken on the lined sheet pan.
                 </p>
 
               </div>
@@ -139,9 +169,7 @@
                       <div></div>
                   </header>
                   <p>
-                    Reduce to medium heat, add the rice, and completely combine with the chicken.
-                    Allow 4–5 minutes for the rice to parch or brown with the chicken to produce a
-                    nutty taste and caramel color.
+                    Season the chicken thoroughly, including inside the cavity.
                 </p>
 
               </div>
@@ -151,7 +179,12 @@
                       <p>Step 6</p>
                       <div></div>
                   </header>
-                  <p>Add the pigeon peas, then the garlic, onions, chives, pimentos, and pumpkin.</p>
+                  <p>
+                    Bake/roast the chicken until it reaches 175 degree internal temperature (or
+                    your preferred temperature – no less than 165 degrees). I baked my 4 pounder
+                    for 1 1/2 hours.
+                  </p>
+
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -160,10 +193,9 @@
                       <div></div>
                   </header>
                  <p>
-                    Combine the coconut powder and water in the pot. The rice should be completely
-                    submerged in water. Stir in the aromatics, then add the entire pepper, cover,
-                    and cook on a low heat. (Approximately 8–10 minutes)
-                </p>
+                    Remove the chicken from the oven and tent loosely with aluminum foil. Rest for
+                    10 to 15 minutes before cutting.
+                  </p>
 
               </div>
               <!-- single instruction -->
@@ -172,110 +204,44 @@
                       <p>Step 8</p>
                       <div></div>
                   </header>
-                  <p>
-                    Remove the lid after this time and add the carrots and corn. Stir to
-                    incorporate, and at this stage, check the rice for doneness. If it's still a
-                    touch hard or near to being done, add a little more water and cover the pot to
-                    simmer for a few minutes longer. However, if the Pelau is still damp and near
-                    to being done, keep it uncovered to enable the extra water to evaporate.
-                </p>
+                 <p>
+                    Plate and serve with your favorite side dish. [See recommended sides in notes
+                    section]. Enjoy!
+                  </p>            
+              </div>
 
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 9</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Season with salt and pepper after adding the chadon beni and salted butter.
-                    Season with salt and pepper to taste, and stir well to combine all
-                    ingredients, preventing the bottom from burning.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 10</p>
-                      <div></div>
-                  </header>
-                  <p>Carry on like this until you've achieved the required uniformity.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 11</p>
-                      <div></div>
-                  </header>
-                  <p>Allow 15 minutes for the flavors to merge and set after removing from the heat.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 12</p>
-                      <div></div>
-                  </header>
-                 <p>Serve on its own or with coleslaw for a delicious side dish.</p>
-
-              </div>
           </article>
           <article class="second-column">
               <div>
                   <h4>Ingredients</h4>
                   <p class="single-ingredients">
-                    3 Tbsp Vegetable Oil
+                    4 pounds chicken (1 whole chicken) Remove and reserve any included giblets for
+                    another use.
+                  </p>
+
+                  <p class="single-ingredients">
+                    1 1/2 tablespoons extra virgin olive oil
                   </p>
                   <p class="single-ingredients">
-                    ½ Cup Brown Sugar
+                    1 tablespoon fresh tarragon leaves finely chopped
                   </p>
                   <p class="single-ingredients">
-                    1 Whole Seasoned Chicken (Cut into Pieces)
+                    5 cloves garlic crushed
                   </p>
                   <p class="single-ingredients">
-                    2¼ Cups Rice
+                    3 teaspoons sea salt or kosher. Adjust for your diet.
                   </p>
                   <p class="single-ingredients">
-                    1 Tin of Pigeon Peas
+                    3 teaspoons granulated sugar
                   </p>
                   <p class="single-ingredients">
-                    6 Cloves of Garlic (Finely Minced)
+                    2 teaspoons freshly grated nutmeg
                   </p>
                   <p class="single-ingredients">
-                    ½ Cup Onions (Finely Minced)
+                    1 teaspoon freshly ground black pepper
                   </p>
                   <p class="single-ingredients">
-                    2 Bundles Chives (Chopped)
-                  </p>
-                  <p class="single-ingredients">
-                    6 Pimento Peppers (Finely Minced)
-                  </p>
-                  <p class="single-ingredients">
-                    1¼ Cup Pumpkin (Cubed)
-                  </p>
-                  <p class="single-ingredients">
-                    ¼ Cup Coconut Milk
-                  </p>
-                  <p class="single-ingredients">
-                    Water (About 4 Cups)
-                  </p>
-                  <p class="single-ingredients">
-                    1 Whole Scotch Bonnet Pepper
-                  </p>
-                  <p class="single-ingredients">
-                    ¾ Cup Carrots (Cubed)
-                  </p>
-                  <p class="single-ingredients">
-                    ½ Cup Corn Kernels (Optional)
-                  </p>
-                  <p class="single-ingredients">
-                    ½ Cup Corn Kernels (Optional)
-                  </p>
-                  <p class="single-ingredients">
-                    2 Bundles Chadon Beni/Culantro (Finely Chopped)
-                  </p>
-                  <p class="single-ingredients">
-                    Salt and Black Pepper to taste
+                    1 teaspoon fennel seeds
                   </p>
               </div>
 
