--- a/rumPunch-recipe.html
+++ b/rumPunch-recipe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Recipe</title>
+    <title>Rum Punch</title>
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -28,7 +28,6 @@
         <!-- links -->
         <div class="nav-links show-links">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="recipe.html" class="nav-link">Recipe</a>
             <a href="tags.html" class="nav-link">Tags</a>
             <a href="about.html" class="nav-link">About</a>
 
@@ -44,17 +43,18 @@
     <main class="page">
       <div class="recipe-page">
           <section class="recipe-hero">
-              <img src="./assets/recipe/recipe_1.jpg" class="img recipe-hero-img" alt="spoons"/>
+            <iframe width="400" height="315" src="https://www.youtube-nocookie.com/embed/zF2pk1oZvYY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullscreen></iframe>
               <article>
-                  <h2>Banana Pancakes</h2>
+                  <h2>Rum Punch</h2>
                   <p>
-                        Another recipe on here that you probably won't identify with the Caribbean,
-                        but it's one I make frequently and felt compelled to share with you. It's
-                        packed with deep, rich, and soothing tastes after being slowly cooked in the
-                        oven until the meat falls from the bones. In Canada, winters can be terrible,
-                        so a dish like this strikes the spot on those cold nights, and leftovers can
-                        simply be refrigerated and reheated.
-                    </p>
+                    There are as many rum punch recipes and origin stories as there are Caribbean
+                    islands. In fact, given that most families have their own variants of this
+                    "get-the-party-started" promise, which is always served on the rocks, there
+                    could be many more. Our recipe (which is the greatest!) hails from Trinidad,
+                    and it follows all of their laws down to the last sip: Angostura bitters are
+                    required, followed by grated nutmeg as a finishing touch.
+                  </p>
+
                     <!-- recipe icons -->
                     <div class="recipe-icons">
                         <!-- single recipe icon -->
@@ -79,10 +79,10 @@
 
                     <!-- recipe tags  -->
                     <div class="recipe-tags">
-                        Tags: <a href="tag-template.html">Beef</a>
-                        <a href="tag-template.html">Oil-down</a>
-                        <a href="tag-template.html">Pelau</a>
-                        <a href="tag-template.html">Breakfast</a>
+                        Tags:
+                         <a href="https://spicetrekkers.com/recipes/pinapple-punch">Pineapple Punch</a>
+                        <a href="https://spicetrekkers.com/recipes/biscuits-%C3%A9pic%C3%A9s-au-rhum">Biscuits Epices Au Rhum</a>
+                        <a href="https://spicetrekkers.com/recipes/lemon-ginger-vodka">Lemon Ginger Vodka</a>
                     </div>
               </article>
           </section>
@@ -97,7 +97,11 @@
                       <p>Step 1</p>
                       <div></div>
                   </header>
-                  <p>Over high heat, heat you pot</p>
+                  <p>
+                    In a small saucepan, dissolve water and sugar on medium heat. Remove from heat
+                    and let cool.
+                  </p>
+
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -105,7 +109,7 @@
                       <p>Step 2</p>
                       <div></div>
                   </header>
-                  <p>When the pot is hot, add the oil, followed by the brown sugar.</p>
+                  <p>In a pitcher, combine rum, juices, bitters, and syrup.</p>
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -113,176 +117,40 @@
                       <p>Step 3</p>
                       <div></div>
                   </header>
-                  <p>
-                    When the sugar starts to bubble and caramelize, stir constantly with a pot
-                    spoon until it turns a rich amber color with a hint of black jack.
-                </p>
+                      <p>
+                        Fill glasses half-full with ice. Pour punch. Grate a pinch of nutmeg into each
+                        glass. Enjoy!
+                      </p>
 
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 4</p>
-                      <div></div>
-                  </header>
-                 <p>
-                    Add the seasoned chicken pieces to the pot right away and toss to uniformly
-                    coat them in caramelized sugar. Allow 10 minutes for the chicken to simmer
-                    (brown).
-                </p>
 
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 5</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Reduce to medium heat, add the rice, and completely combine with the chicken.
-                    Allow 4–5 minutes for the rice to parch or brown with the chicken to produce a
-                    nutty taste and caramel color.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 6</p>
-                      <div></div>
-                  </header>
-                  <p>Add the pigeon peas, then the garlic, onions, chives, pimentos, and pumpkin.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 7</p>
-                      <div></div>
-                  </header>
-                 <p>
-                    Combine the coconut powder and water in the pot. The rice should be completely
-                    submerged in water. Stir in the aromatics, then add the entire pepper, cover,
-                    and cook on a low heat. (Approximately 8–10 minutes)
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 8</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Remove the lid after this time and add the carrots and corn. Stir to
-                    incorporate, and at this stage, check the rice for doneness. If it's still a
-                    touch hard or near to being done, add a little more water and cover the pot to
-                    simmer for a few minutes longer. However, if the Pelau is still damp and near
-                    to being done, keep it uncovered to enable the extra water to evaporate.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 9</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Season with salt and pepper after adding the chadon beni and salted butter.
-                    Season with salt and pepper to taste, and stir well to combine all
-                    ingredients, preventing the bottom from burning.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 10</p>
-                      <div></div>
-                  </header>
-                  <p>Carry on like this until you've achieved the required uniformity.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 11</p>
-                      <div></div>
-                  </header>
-                  <p>Allow 15 minutes for the flavors to merge and set after removing from the heat.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 12</p>
-                      <div></div>
-                  </header>
-                 <p>Serve on its own or with coleslaw for a delicious side dish.</p>
-
-              </div>
+             
           </article>
           <article class="second-column">
               <div>
                   <h4>Ingredients</h4>
                   <p class="single-ingredients">
-                    3 Tbsp Vegetable Oil
+                    1 cup raw sugar
                   </p>
                   <p class="single-ingredients">
-                    ½ Cup Brown Sugar
+                    ½ cup water
                   </p>
                   <p class="single-ingredients">
-                    1 Whole Seasoned Chicken (Cut into Pieces)
+                    1 Tbsp Angostura bitters
                   </p>
                   <p class="single-ingredients">
-                    2¼ Cups Rice
+                    2-2½ cups good dark rum
                   </p>
                   <p class="single-ingredients">
-                    1 Tin of Pigeon Peas
+                    ½ cup lime juice
                   </p>
                   <p class="single-ingredients">
-                    6 Cloves of Garlic (Finely Minced)
-                  </p>
-                  <p class="single-ingredients">
-                    ½ Cup Onions (Finely Minced)
-                  </p>
-                  <p class="single-ingredients">
-                    2 Bundles Chives (Chopped)
-                  </p>
-                  <p class="single-ingredients">
-                    6 Pimento Peppers (Finely Minced)
-                  </p>
-                  <p class="single-ingredients">
-                    1¼ Cup Pumpkin (Cubed)
-                  </p>
-                  <p class="single-ingredients">
-                    ¼ Cup Coconut Milk
-                  </p>
-                  <p class="single-ingredients">
-                    Water (About 4 Cups)
-                  </p>
-                  <p class="single-ingredients">
-                    1 Whole Scotch Bonnet Pepper
-                  </p>
-                  <p class="single-ingredients">
-                    ¾ Cup Carrots (Cubed)
-                  </p>
-                  <p class="single-ingredients">
-                    ½ Cup Corn Kernels (Optional)
-                  </p>
-                  <p class="single-ingredients">
-                    ½ Cup Corn Kernels (Optional)
-                  </p>
-                  <p class="single-ingredients">
-                    2 Bundles Chadon Beni/Culantro (Finely Chopped)
-                  </p>
-                  <p class="single-ingredients">
-                    Salt and Black Pepper to taste
-                  </p>
+                    ½ cup other citrus juice of choice
+                  </p>                  
               </div>
 
               <div>
                   <h4>Tools</h4>
-                  <p class="single-tools">Hand Blend</p>
-                  <p class="single-tools">Large Pot</p>
+                  <p class="single-tools">Saucepan</p>
                   <p class="single-tools"> Measuring Spoons</p>
                   <p class="single-tools">Measuring Cups</p>
               </div>
