--- a/spiceCake-recipe.html
+++ b/spiceCake-recipe.html
@@ -28,7 +28,6 @@
         <!-- links -->
         <div class="nav-links show-links">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="recipe.html" class="nav-link">Recipe</a>
             <a href="tags.html" class="nav-link">Tags</a>
             <a href="about.html" class="nav-link">About</a>
 
@@ -82,10 +81,12 @@
 
                     <!-- recipe tags  -->
                     <div class="recipe-tags">
-                        Tags: <a href="tag-template.html">Beef</a>
-                        <a href="tag-template.html">Oil-down</a>
-                        <a href="tag-template.html">Pelau</a>
-                        <a href="tag-template.html">Breakfast</a>
+                        Tags: 
+                        <a href="https://www.allrecipes.com/recipes/710/world-cuisine/latin-american/caribbean/jamaican/">Jamaican Recipes</a>
+                        <!-- <a href="https://www.allrecipes.com/recipes/728/world-cuisine/latin-american/mexican/">100+ Mexican Recipes</a> -->
+                        <a href="https://www.allrecipes.com/recipes/230/world-cuisine/latin-american/caribbean/">Caribbean Recipes</a>
+                        <!-- <a href="https://www.allrecipes.com/recipes/730/world-cuisine/latin-american/south-american/">South American Recipes</a> -->
+                        <a href="https://www.allrecipes.com/recipes/710/world-cuisine/latin-american/caribbean/jamaican/">Cuban Recipes</a>
                     </div>
               </article>
           </section>
@@ -176,8 +177,8 @@
 
               <div>
                   <h4>Tools</h4>
-                  <p class="single-tools">Hand Blend</p>
-                  <p class="single-tools">Large Pot</p>
+                  <p class="single-tools">Loaf Pan</p>
+                  <p class="single-tools">Medium Bowl</p>
                   <p class="single-tools"> Measuring Spoons</p>
                   <p class="single-tools">Measuring Cups</p>
               </div>
