--- a/tags.html
+++ b/tags.html
@@ -28,7 +28,6 @@
         <!-- links -->
         <div class="nav-links show-links">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="recipe.html" class="nav-link">Recipe</a>
             <a href="tags.html" class="nav-link">Tags</a>
             <a href="about.html" class="nav-link">About</a>
 
@@ -43,32 +42,230 @@
     <main class="page">
         <section class="tag-wrapper">
             <!-- single tag -->
+            <a href="http://www.spoonsandstilettos.com/recipe/easy-oven-baked-vegetable-frittata/" class="tag">
+                <h5>Easy oven baked vegetable frittata</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            
+            <!-- single tag -->
+            <a href="http://www.spoonsandstilettos.com/recipe/cranberry-glazed-hatfield-uncured-ham-recipe/" class="tag">
+                <h5> Cranberry glazed hatfield uncured ham</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="http://www.spoonsandstilettos.com/recipe/kale-egg-and-cheese-quesadillas/" class="tag">
+                <h5>Kale, egg and cheese quesadilla</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://recipes.timesofindia.com/recipes/chicken-biryani/rs53096628.cms" class="tag">
+                <h5>Chicken Biryani</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.nutmegnanny.com/tag/bell-pepper/" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.nutmegnanny.com/tag/carrot/" class="tag">
+                <h5>Carrot</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.nutmegnanny.com/tag/chicken/" class="tag">
+                <h5>Chicken</h5>
+                <p>117 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.nutmegnanny.com/tag/chicken-stock/" class="tag">
+                <h5>Chicken Stock</h5>
+                <p>27 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.butterbeready.com/salmon-cakes-with-quick-aioli/" class="tag">
+                <h5>Salmon Cake</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.butterbeready.com/creamy-chicken-and-mushrooms/" class="tag">
+                <h5>Creamy Chicken and Mushrooms</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.butterbeready.com/chicken-and-dumplings-recipe/" class="tag">
+                <h5>Easy Chicken & Dumplings</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.butterbeready.com/jamaican-rice-and-peas/" class="tag">
+                <h5>Jamaican Rice & Peas</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.bbcgoodfood.com/recipes/barbecued-plantains" class="tag">
+                <h5>Barbecued Plantains</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.bbcgoodfood.com/recipes/reggae-reggae-nachos" class="tag">
+                <h5>Reggae nachos</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.cookingclassy.com/jerk-chicken-with-mango-avocado-salsa-and-coconut-rice/" class="tag">
+                <h5>Jerk chicken with mango avocado salsa and coconut rice</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.cookingclassy.com/chicken-marinade-triple-citrus/" class="tag">
+                <h5>Triple citrus chicken marinade</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="https://www.cookingclassy.com/sheet-pan-lemon-chicken-with-parmesan-roasted-broccoli/" class="tag">
+                <h5>Sheet pan lemon chicken with parmesan roasted broccoli</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
             <a href="tag-template.html" class="tag">
-                <h5>Beef</h5>
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
                 <p>1 recipe</p>
             </a>
             <!-- end of single tag -->
             <!-- single tag -->
             <a href="tag-template.html" class="tag">
-                <h5>Breakfast</h5>
+                <h5>Bell Pepper</h5>
                 <p>1 recipe</p>
             </a>
             <!-- end of single tag -->
             <!-- single tag -->
             <a href="tag-template.html" class="tag">
-                <h5>Carrots</h5>
+                <h5>Bell Pepper</h5>
                 <p>1 recipe</p>
             </a>
             <!-- end of single tag -->
             <!-- single tag -->
             <a href="tag-template.html" class="tag">
-                <h5>Dinner</h5>
+                <h5>Bell Pepper</h5>
                 <p>1 recipe</p>
             </a>
             <!-- end of single tag -->
             <!-- single tag -->
             <a href="tag-template.html" class="tag">
-                <h5>Food</h5>
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
+                <p>1 recipe</p>
+            </a>
+            <!-- end of single tag -->
+            <!-- single tag -->
+            <a href="tag-template.html" class="tag">
+                <h5>Bell Pepper</h5>
                 <p>1 recipe</p>
             </a>
             <!-- end of single tag -->
